Add safety timeout and redirect-based auth - fix Auth not ready

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <script defer src="data/dataindex.js?v=20251019"></script>
 
 <!-- app scripts -->
-<script type="module" src="js/firebase-init.js?v=20251021"></script>
-<script type="module" src="js/auth.js?v=20251021"></script>
+<script type="module" src="/js/firebase-init.js" defer></script>
+<script type="module" src="/js/auth.js" defer></script>
 <script defer src="js/state.js?v=20251017"></script>
 <script defer src="js/tts.js?v=20251017"></script>
 <script defer src="js/app.js?v=20251017"></script>
