--- a/index.html
+++ b/index.html
@@ -49,28 +49,7 @@
   </svg>'/>
 
 <!-- PWA Manifest -->
-<link rel="manifest" href='data:application/json;utf8,
-  {
-    "name": "Sori - Learn Korean by Sound",
-    "short_name": "Sori",
-    "description": "Learn Korean naturally by repeating real sounds",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#faf8ff",
-    "theme_color": "#7c3aed",
-    "icons": [
-      {
-        "src": "data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 192 192%22%3E%3Ccircle cx=%2296%22 cy=%2296%22 r=%2290%22 fill=%22%237c3aed%22/%3E%3Ctext x=%2296%22 y=%22125%22 font-family=%22sans-serif%22 font-size=%2248%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ESori%3C/text%3E%3C/svg%3E",
-        "sizes": "192x192",
-        "type": "image/svg+xml"
-      },
-      {
-        "src": "data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22%3E%3Ccircle cx=%22256%22 cy=%22256%22 r=%22240%22 fill=%22%237c3aed%22/%3E%3Ctext x=%22256%22 y=%22340%22 font-family=%22sans-serif%22 font-size=%22128%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ESori%3C/text%3E%3C/svg%3E",
-        "sizes": "512x512",
-        "type": "image/svg+xml"
-      }
-    ]
-  }'/>
+<link rel="manifest" href='data:application/json;utf8,{"name":"Sori - Learn Korean by Sound","short_name":"Sori","description":"Learn Korean naturally by repeating real sounds","start_url":"/","display":"standalone","background_color":"#faf8ff","theme_color":"#7c3aed","icons":[{"src":"data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 192 192%22%3E%3Ccircle cx=%2296%22 cy=%2296%22 r=%2290%22 fill=%22%237c3aed%22/%3E%3Ctext x=%2296%22 y=%22125%22 font-family=%22sans-serif%22 font-size=%2248%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ESori%3C/text%3E%3C/svg%3E","sizes":"192x192","type":"image/svg+xml"},{"src":"data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22%3E%3Ccircle cx=%22256%22 cy=%22256%22 r=%22240%22 fill=%22%237c3aed%22/%3E%3Ctext x=%22256%22 y=%22340%22 font-family=%22sans-serif%22 font-size=%22128%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ESori%3C/text%3E%3C/svg%3E","sizes":"512x512","type":"image/svg+xml"}]}'/>
 
 <script>window.GA_ID='G-X1Q98DBKR5';</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1Q98DBKR5"></script>
