--- a/index.html
+++ b/index.html
@@ -332,26 +332,20 @@ document.addEventListener('DOMContentLoaded', ()=>{
   // 즐겨찾기/저장 클릭 시 로그인 요구 게이트
   async function requireLoginThen(action) {
     try {
-      const u = window.firebaseAuth?.currentUser || window.SoriUser?.user;
+      const u = window.SoriUser?.getCurrentUser();
       if (u) return action?.();
-      // 아직 로그인 안됨 → 모달 열고 한번만 후속 실행
-      openModal();
-
-      const once = (ev) => {
-        document.removeEventListener("sori:logged-in", once);
-        action?.();
-      };
-      document.addEventListener("sori:logged-in", once, { once: true });
+      // 아직 로그인 안됨 → 알림만 표시
+      alert("로그인 후 이용해주세요.");
     } catch (e) {
       console.warn("requireLoginThen error:", e);
-      openModal();
+      alert("로그인 후 이용해주세요.");
     }
   }
 
   // Saved 버튼들 게이트 적용
   safeOn(btnScrap, "click", (e) => {
     // app.js의 실제 저장 로직을 막지 않으면서, 미로그인일 때만 가로채기
-    const isLoggedIn = !!(window.firebaseAuth?.currentUser || window.SoriUser?.user);
+    const isLoggedIn = !!window.SoriUser?.getCurrentUser();
     if (!isLoggedIn) {
       e.stopImmediatePropagation();
       e.preventDefault();
@@ -360,7 +354,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
   });
 
   safeOn(btnSaved, "click", (e) => {
-    const isLoggedIn = !!(window.firebaseAuth?.currentUser || window.SoriUser?.user);
+    const isLoggedIn = !!window.SoriUser?.getCurrentUser();
     if (!isLoggedIn) {
       e.stopImmediatePropagation();
       e.preventDefault();
@@ -402,7 +396,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
         window.SoriUser.onAuth((user) => setLoggedInUI(user));
       }
       // 초기 상태 반영
-      setLoggedInUI(window.firebaseAuth?.currentUser || window.SoriUser?.user || null);
+      setLoggedInUI(window.SoriUser?.getCurrentUser() || null);
     } catch (e) {
       console.error("Auth state wiring error:", e);
     }
@@ -410,7 +404,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
 
   // firebaseReady가 이미 지난 시점일 수도 있으니 한 번 더 시도
   setTimeout(() => {
-    setLoggedInUI(window.firebaseAuth?.currentUser || window.SoriUser?.user || null);
+    setLoggedInUI(window.SoriUser?.getCurrentUser() || null);
   }, 0);
 })();
 });
